--- a/resources/templates/ui/gettingStarted.twig.html
+++ b/resources/templates/ui/gettingStarted.twig.html
@@ -8,21 +8,25 @@ This is a Gibbon template file, written in HTML and Twig syntax.
 For info about editing, see: https://twig.symfony.com/doc/2.x/
 -->#}
 
-{% import _self as page  %}
+{% import _self as page %}
 
 {% if postInstall %}
-    <div class="mt-6 mb-2 py-6 px-6 bg-white shadow rounded font-sans">
-        <div class="text-lg text-gray-800 font-semibold leading-normal">
-            {{ __('Post-Install & Server Config') }}
-        </div>
-
-        <p class="mt-2 mb-0 text-gray-600">
-            {{ __('To complete your installation, it is advisable to follow the %1$sPost-Install and Server Config instructions%2$s.')|format("<a target='_blank' href='https://gibbonedu.org/support/administrators/installing-gibbon/#post-install-server-config'>", "</a>")|raw }}
-            <br/><br/>
-
-            {{ __('After logging in, be sure to visit the System Check page to ensure all system requirements have been met. You can find additional information about your system in the Server Info page.') }}
-        </p>
+<div class="mt-6 mb-2 py-6 px-6 bg-white shadow rounded font-sans">
+    <div class="text-lg text-gray-800 font-semibold leading-normal">
+        {{ __('Post-Install & Server Config') }}
     </div>
+
+    <p class="mt-2 mb-0 text-gray-600">
+        {{ __('To complete your installation, it is advisable to follow the %1$sPost-Install and Server Config
+        instructions%2$s.')|format("<a target='_blank'
+            href='https://gibbonedu.org/support/administrators/installing-gibbon/#post-install-server-config'>",
+            "</a>")|raw }}
+        <br /><br />
+
+        {{ __('After logging in, be sure to visit the System Check page to ensure all system requirements have been met.
+        You can find additional information about your system in the Server Info page.') }}
+    </p>
+</div>
 {% endif %}
 
 <div class="mt-6 mb-2 bg-white shadow rounded font-sans">
@@ -32,14 +36,19 @@ For info about editing, see: https://twig.symfony.com/doc/2.x/
             {{ __('Getting Started with Gibbon') }}
         </div>
 
-        <p class="mt-2 mb-0 text-gray-600">{{ __('Our community offers documentation and support forums to help get you up and running with Gibbon. If you need additional assistance, members of the Gibbon team can provide expert support. Visit {link} to learn more.', {link: '<a href="http://gibbonedu.com" target="_blank" class="text-red-700 underline">gibbonedu.com</a>'})|raw }}</p>
+        <p class="mt-2 mb-0 text-gray-600">{{ __('Our community offers documentation and support forums to help get you
+            up and running with Gibbon. If you need additional assistance, members of the Gibbon team can provide expert
+            support. Visit {link} to learn more.', {link: '<a href="http://su.ac.ug" target="_blank"
+                class="text-red-700 underline">su.ac.ug</a>'})|raw }}</p>
     </div>
 
     <div class="py-4 px-3 flex flex-wrap items-stretch">
 
-        {{ page.card(__('Documentation'), __('Our docs provide technical information as well as user guides for Administrators, Developers, Teachers, and Parents.'), 'docs', 'https://docs.gibbonedu.org' ) }}
+        {{ page.card(__('Documentation'), __('Our docs provide technical information as well as user guides for
+        Administrators, Developers, Teachers, and Parents.'), 'docs', 'https://docs.gibbonedu.org' ) }}
 
-        {{ page.card(__('Support Forums'), __('If you need help try asking members of the Gibbon community. Similarly, issues and bugs can be reported to the forum as well.'), 'forums', 'https://ask.gibbonedu.org' ) }}
+        {{ page.card(__('Support Forums'), __('If you need help try asking members of the Gibbon community. Similarly,
+        issues and bugs can be reported to the forum as well.'), 'forums', 'https://ask.gibbonedu.org' ) }}
 
         <div class="w-full text-base text-gray-600 font-light mt-6 mb-2 ml-3">
             {{ __('Extended Services') }}
@@ -47,15 +56,21 @@ For info about editing, see: https://twig.symfony.com/doc/2.x/
 
         {% if gibboneduComOrganisationKey is empty %}
 
-            {{ page.card(__('Expert Support'), __('Members of the Gibbon team are available to help with your Gibbon needs through Ad Hoc support or a Support Contract.'), 'support', 'http://gibbonedu.com' ) }}
+        {{ page.card(__('Expert Support'), __('Members of the Gibbon team are available to help with your Gibbon needs
+        through Ad Hoc support or a Support Contract.'), 'support', 'http://su.ac.ug' ) }}
 
-            {{ page.card(__('Value Added License'), __('Gibbon Value Added License, which, via the Query Builder module, gives access to over 90 useful queries.'), 'license', 'http://gibbonedu.com') }}
+        {{ page.card(__('Value Added License'), __('Gibbon Value Added License, which, via the Query Builder module,
+        gives access to over 90 useful queries.'), 'license', 'http://su.ac.ug') }}
 
         {% else %}
 
-            {{ page.card(__('Expert Support'), __('Members of the Gibbon team are available to help with your Gibbon needs through Ad Hoc support or a Support Contract.'), 'support', absoluteURL~'/index.php?q=/modules/System Admin/services_manage.php', '') }}
+        {{ page.card(__('Expert Support'), __('Members of the Gibbon team are available to help with your Gibbon needs
+        through Ad Hoc support or a Support Contract.'), 'support', absoluteURL~'/index.php?q=/modules/System
+        Admin/services_manage.php', '') }}
 
-            {{ page.card(__('Value Added License'), __('Gibbon Value Added License, which, via the Query Builder module, gives access to over 90 useful queries.'), 'license', absoluteURL~'/index.php?q=/modules/System Admin/services_manage.php', '') }}
+        {{ page.card(__('Value Added License'), __('Gibbon Value Added License, which, via the Query Builder module,
+        gives access to over 90 useful queries.'), 'license', absoluteURL~'/index.php?q=/modules/System
+        Admin/services_manage.php', '') }}
 
         {% endif %}
     </div>
@@ -63,26 +78,29 @@ For info about editing, see: https://twig.symfony.com/doc/2.x/
     {% if gibboneduComOrganisationKey is empty and gibbonVersion is not empty %}
     <div class="px-6 pt-3 pb-3 text-gray-600 border-t border-gray-300">
         <p class="m-0">
-        {{ __('Do you have a Service Key? View and configure your licenses on the {link} page.', {link: '<a href="'~absoluteURL~'/index.php?q=/modules/System Admin/services_manage.php" class="text-red-700 underline">'~__('Manage Services')~'</a>'})|raw }}
+            {{ __('Do you have a Service Key? View and configure your licenses on the {link} page.', {link: '<a
+                href="'~absoluteURL~'/index.php?q=/modules/System Admin/services_manage.php"
+                class="text-red-700 underline">'~__('Manage Services')~'</a>'})|raw }}
         </p>
     </div>
     {% endif %}
 </div>
 
 {% macro card(name, content, icon = '', url = '', target = '_blank') %}
-    <div class="w-full sm:w-1/2 pr-4">
-        <a href="{{ url }}" target="{{ target }}" class="flex bg-white rounded h-full text-gray-800 hover:bg-{{ themeColour }}-100 hover:text-{{ themeColour }}-700">
-            <div class="pl-4 pr-2 py-4">
-                {{ include('ui/icons.twig.html', {'iconClass': 'w-10 h-10 opacity-75'}) }}
-            </div>
-            <div class="flex-1 p-4">
-                <p class="m-0 text-base font-semibold font-sans">
-                    {{ name }}
-                </p>
-                <p class="m-0 pt-3 text-gray-600 leading-tight">
-                    {{ content|raw }}
-                </p>
-            </div>
-        </a>
-    </div>
+<div class="w-full sm:w-1/2 pr-4">
+    <a href="{{ url }}" target="{{ target }}"
+        class="flex bg-white rounded h-full text-gray-800 hover:bg-{{ themeColour }}-100 hover:text-{{ themeColour }}-700">
+        <div class="pl-4 pr-2 py-4">
+            {{ include('ui/icons.twig.html', {'iconClass': 'w-10 h-10 opacity-75'}) }}
+        </div>
+        <div class="flex-1 p-4">
+            <p class="m-0 text-base font-semibold font-sans">
+                {{ name }}
+            </p>
+            <p class="m-0 pt-3 text-gray-600 leading-tight">
+                {{ content|raw }}
+            </p>
+        </div>
+    </a>
+</div>
 {% endmacro card %}
